# jobgrapido-hackaton-012024

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Makefile  conanfile.txt  launch.sh
proto/: pubsub.proto  service.proto  vrfy.proto
src/: api.cpp  api.h  dns.cpp  dns.h  email_verifier.cpp  email_verifier.h  main.cpp  pubsub.cpp  pubsub.h  vrfy_client.cpp  vrfy_client.h
src/service/: email_verifier.h
